# ESP32-CAM-Video-Streaming

./: CMakeLists.txt  README.md  platformio.ini  sdkconfig.esp32cam
include/: nvs_utils.h  server.h  session_manager.h  wifi_config.h
include/endpoints/: approve.h  hello.h  home.h  login.h  logout.h  register.h  stream.h
include/utils/: email_utils.h  hash_utils.h  nvs_utils.h  utils.h
src/: CMakeLists.txt  main.c  nvs_utils.c  session_manager.c  wifi_config.c
src/endpoints/: approve.c  hello.c  home.c  login.c  logout.c  register.c  stream.c
src/server/: server.c
src/utils/: email_utils.c  hash_utils.c  nvs_utils.c
src/web/home_page/: index.html  styles.css
